# sip2-mediator-rs

./: Cargo.toml  LICENSE  README.md
conf/: sip2-mediator.yml
src/: conf.rs  main.rs  server.rs  session.rs
