[package]
name = "sip2-mediator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
syslog = "6.0"
uuid = { version = "1.1", features = ["v4"] }
serde_urlencoded = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
#sip2 = { version = "0.2.2", features = ["json"] }
#sip2 = { version = "0.2.2", features = ["json"], path = "../sip2-client-rs" }
sip2 = { git = "https://github.com/berick/sip2-client-rs", features = ["json"], version = "0.2" }
getopts = "0.2"
threadpool = "1.8"
yaml-rust = "0.4"

[[bin]]
name = "sip2-mediator"
path = "src/main.rs"
