[package]
name = "sip2-mediator-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
syslog = "6.0"
uuid = { version = "1.1", features = ["v4"] }
serde_urlencoded = "0.7"
reqwest = { version = "0.11", features = ["blocking"] }
sip2 = { version = "0.3.1", features = ["json"] }
getopts = "0.2"
threadpool = "1.8"
yaml-rust = "0.4"
# TODO tcp listener read timeouts
#signal-hook = "0.3"
# TODO tcp listener read timeouts
#socket2 = "0.5.6"

[[bin]]
name = "sip2-mediator"
path = "src/main.rs"
